--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
     font-weight: var(--font-medium);
     background-color: var(--container-color);
     color: var(--text-color);
+    transition: background .4s;
 }
 
 h1, h2, h3, h4 {
@@ -105,6 +106,7 @@ img {
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
+    transition: background .4s;
 }
 
 .nav {
@@ -132,6 +134,7 @@ img {
         margin-inline: 1.5rem;
         border-radius: .5rem;
         padding: 1.25rem 3rem;
+        transition: background .4s;
     }
 }
 
@@ -208,6 +211,7 @@ img {
     position: absolute;
     width: 50px;
     fill: var(--title-color);
+    transition: fill .4s;
 }
 
 .home__star-1 {
@@ -223,4 +227,343 @@ img {
 
 .home__profession {
     transform: translateY(-1.2rem);
+}
+
+/* A Propos */
+
+.about__button {
+    width: max-content;
+    color: var(--title-color);
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+    display: flex;
+    align-items: center;
+    column-gap: .5rem;
+}
+
+.about__button i {
+    font-size: 1rem;
+}
+
+.about__button:hover,
+.about__social-link:hover {
+    text-decoration: underline;
+}
+
+.about__social {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.about__social-link {
+    color: var(--title-color);
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+}
+
+/* Compétences */
+
+.skills__content,
+.skills__list {
+    display: grid;
+}
+
+.skills__content {
+    grid-template-columns: repeat(2, max-content);
+    align-items: baseline;
+    column-gap: 3rem;
+}
+
+.skills__list {
+    row-gap: 1rem;
+}
+
+.skills__list li {
+    margin: 0;
+}
+
+/* Partie resume */
+
+.resume__title {
+    font-size: var(--normal-font-size);
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: .25rem;
+}
+
+.resume__title i {
+    font-size: 1.5rem;
+    font-weight: initial;
+}
+
+.resume__data {
+    display: grid;
+    row-gap: .5rem;
+    padding-left: 1.5rem;
+    font-size: var(--small-font-size);
+}
+
+.resume__button-link {
+    width: max-content;
+    color: var(--text-color);
+    display: inline-flex;
+    column-gap: .25rem;
+    font-weight: var(--font-semi-bold);
+}
+
+.resume__button-link:hover {
+    text-decoration: underline;
+}
+
+/* footer */
+
+.footer {
+    padding-block: 5.2rem 8rem;
+}
+
+.footer__container {
+    border-top: 2px solid var(--title-color);
+    padding-top: 1.5rem;
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    row-gap: 2.5rem;
+}
+
+.footer__title {
+    font-size: var(--normal-font-size);
+    margin-bottom: .5rem;
+}
+
+.footer__info,
+.footer__link {
+    font-size: var(--small-font-size);
+}
+
+.footer__link {
+    color: var(--text-color);
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+/* Barre de defillement */
+
+::-webkit-scrollbar {
+    width: .6rem;
+    border-radius: .5rem;
+    background-color: hsl(40, 16%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: .5rem;
+    background-color: hsl(40, 16%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(40, 16%, 55%);
+}
+
+/* faire defiler vers le haut */
+
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -50% /*7rem*/;
+    background-color: var(--container-color);
+    box-shadow: 0 4px 16px hsla(40, 48%, 4%, .15);
+    display: inline-flex;
+    padding: 6px;
+    font-size: 1.25rem;
+    color: var(--title-color);
+    border-radius: .25rem;
+    z-index: var(--z-tooltip);
+    transition: bottom .4s, transform .4s, background .4s;
+}
+
+.scrollup:hover {
+    transform: translateY(-.25rem);
+}
+
+/* Comment faire afficher 'faire glisser vers le haut' */
+
+.show-scroll {
+    bottom: 7rem;
+}
+
+/* Lien actif 'home' */
+
+.active-link::after {
+    opacity: 1;
+    transform: translateY(-4px);
+}
+
+/* theme du site */
+
+.change-theme {
+    font-size: 1.25rem;
+    color: var(--title-color);
+    cursor: pointer;
+}
+
+/* variables des themes sombre */
+
+body.dark-theme {
+    --title-color: hsl(40, 48%, 90%);
+    --text-color: hsl(40, 12%, 70%);
+    --body-color: hsl(40, 12%, 16%);
+    --container-color: hsl(40, 20%, 8%);
+}
+
+/* changements de couleur dans certaines parties du site  avec le thème sombre */
+
+.dark-theme :is(.nav__menu, .scrollup) {
+    background-color: hsl(40, 20%, 12%);
+}
+
+.dark-theme .home__profession {
+    text-shadow: 0 0 6px hsl(40, 20%, 12%);
+}
+
+.dark-theme::-webkit-scrollbar {
+    background-color: hsl(40, 16%, 15%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+    background-color: hsl(40, 16%, 25%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(40, 16%, 35%);
+}
+
+/* responsivité */
+/* Pour les petits appareils */
+@media screen and (max-width: 350px) {
+    .container {
+        margin-inline: 1rem;
+    }
+    .nav__menu {
+        padding-inline: 2rem;
+    }
+    .home__star-1 {
+        left: 0;
+    }
+    .home__star-2 {
+        right: -.5rem;
+    }
+    .skills__content {
+        grid-template-columns: max-content;
+        row-gap: 1rem;
+    }
+    .footer__container {
+        grid-template-columns: max-content;
+        row-gap: 1.5rem;
+    }
+}
+
+/* pour les tailles moyennes */
+@media screen and (min-width: 576px) {
+    .nav__menu {
+        width: 320px;
+        margin-inline: auto;
+    }
+    .footer__container {
+        grid-template-columns: repeat(3, max-content);
+    }
+    .show-scroll {
+        bottom: 3rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .section {
+        padding-top: 2.5rem;
+    }
+    .section__title {
+        margin: 0 0 2rem;
+    }
+    .resume__main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .resume__left,
+    .resume__right {
+        padding-inline: 1.5rem;
+    }
+    .home {
+        grid-column: 1 / 3;
+    }
+    .header {
+        position: initial;
+    }
+    .nav {
+        grid-column: 1 / 3;
+    }
+    .nav__menu,
+    .scrollup {
+        display: none;
+    }
+    .home__container {
+        padding-top: 3rem;
+    }
+    .footer {
+        padding-block: 2.5rem 2rem;
+    }
+}
+
+/* pour les grands appareils */
+@media screen and (min-width: 1024px) {
+    body {
+        background-color: var(--body-color);
+        margin-block: 3rem;
+    }
+    .resume {
+        background-color: var(--container-color);
+        box-shadow: 0 0 48px hsla(40, 48%, 12%, .2);
+        margin-inline: auto;
+        transition: background .4s;
+    }
+    .resume__main {
+        grid-template-columns: 376px 1fr;
+    }
+    .dark-theme .resume {
+        box-shadow: 0 0 48px hsla(40, 48%, 4%, .4);
+    }
+    .nav {
+        height: calc(--header-height) + 1.5rem;
+        margin-inline: 1.5rem;
+    }
+    .home__name {
+        margin-bottom: .5rem;
+    }
+    .home__perfil {
+        width: 280px;
+        height: 320px;
+    }
+    .home__img {
+        width: 245px;
+    }
+    .home__star-1,
+    .home__star-2 {
+        width: 70px;
+    }
+    .home__star-1 {
+        left: -10rem;
+    }
+    .home__star-2 {
+        right: -8.5rem;
+        bottom: 2rem;
+    }
+    .home__profession {
+        transform: translateY(-2rem);
+    }
+    .certificates__container,
+    .references__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .footer__container {
+        margin-inline: 1.5rem;
+        padding-top: 2rem;
+    }
 }
